--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/main-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Travel Trucks"/>
+    <meta property="og:image" content="https://camper-trucks.vercel.app/assets/main-logo-BKaACIzn.svg">
     <title>Travel Trucks</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
